# gen-ai

./: .gitignore  chat.py  pyproject.toml  worker.sh
cursor_clone/: main.py  sum.py
cursor_clone/prompts/: system_prompt.txt
cursor_clone/tools/: read_file.py  run_command.py  write_file.py
human_in_the_loop/: chat.py  main.py
lang_graph/: __init__.py  chat.py  docker-compose.yml  main.py  routing.py
prac/: main.py
prac/rag/: indexing.py
prompting/: agent.py  chain-of-thougth-prompting.py  few-shot-prompting.py  persona-based-prompting.py  zero-shot-prompting.py
prompting/practice/: prac_1.py  prac_2.py  prac_3.py
rag/: indexing.py  retrival_chat.py
rag_with_queue/: README.MD  docker-compose.yml  indexing.py  retrival_chat.py  server.py
rag_with_queue/queue/: worker.py
