[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "langchain>=1.0.0",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.10",
    "langgraph>=0.6.9",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "pymongo>=4.15.3",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rq>=2.6.0",
    "uvicorn>=0.37.0",
]
